# latent-insights-service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py  models.py
app/agents/: base.py  coordinator.py  profiler.py  scout.py  worker.py
app/api/: routes.py  schemas.py  sse.py
app/core/: errors.py  llm.py  parsing.py  queue.py  state.py  tracing.py
app/db/: connection.py  mcp.py  queries.py  schema.py
app/orchestration/: context.py  session.py  thread.py
data/sessions/: 846f0bbfefc0.json  a59dfbbd0fee.json  session_846f0bbfefc0.duckdb  session_a59dfbbd0fee.duckdb
docs/: PROMPTS.md  SPEC.md
tests/: conftest.py  test_coordinator.py  test_db.py  test_integration.py  test_llm.py  test_parsing.py  test_profiler.py  test_scout.py  test_worker.py
tests/fixtures/: coordinator_done_response.json  coordinator_response.json  coordinator_stuck_response.json  profiler_response.json  sample_dataset.csv  scout_response.json  worker_response.json  worker_response_with_view.json
