[project]
name = "latent-insights"
version = "0.1.0"
description = "Parallel agent sensemaking tool — collaborative async data analysis with LLM threads"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "duckdb>=1.2",
    "openai>=1.60",
    "pydantic>=2.10",
    "sse-starlette>=2.2",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "live: tests that call external APIs (deselect with -m 'not live')",
]

[tool.ruff]
line-length = 99
